--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,1 @@
-uv.lock
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
-
-# Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Ruff stuff:
-.ruff_cache/
+/.venv
